progress on assetgraph integration

--- a/packages/export/examples/site/styles/main.styl
+++ b/packages/export/examples/site/styles/main.styl
@@ -1,4 +1,7 @@
+
 body
-  background: hotpink
+  background: hotpink url(../images/logo1.svg)
+
+@import 'typography.css'
 
 @import '../dont-copy/_inner'
